@@ -1,6 +1,7 @@
 /*
  * Copyright (C) 2021 Miriam Herzig
  * Copyright (C) 2021 Matthias Heizmann (heizmann@informatik.uni-freiburg.de)
+ * Copyright (C) 2021 University of Freiburg
  *
  * This file is part of the ULTIMATE IcfgTransformer library.
  *
@@ -29,22 +30,20 @@ package de.uni_freiburg.informatik.ultimate.icfgtransformer.loopacceleration.jor
 import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 import de.uni_freiburg.informatik.ultimate.core.model.services.ILogger;
 import de.uni_freiburg.informatik.ultimate.core.model.services.IUltimateServiceProvider;
 import de.uni_freiburg.informatik.ultimate.icfgtransformer.loopacceleration.LoopAccelerationUtils;
-import de.uni_freiburg.informatik.ultimate.icfgtransformer.loopacceleration.jordan.JordanAcceleratedUpdate.LinearUpdate;
-import de.uni_freiburg.informatik.ultimate.icfgtransformer.loopacceleration.jordan.QuadraticMatrix.JordanTransformationResult;
-import de.uni_freiburg.informatik.ultimate.icfgtransformer.loopacceleration.jordan.QuadraticMatrix.JordanTransformationResult.JordanTransformationStatus;
+import de.uni_freiburg.informatik.ultimate.icfgtransformer.loopacceleration.jordan.JordanDecomposition.JordanDecompositionStatus;
 import de.uni_freiburg.informatik.ultimate.lib.modelcheckerutils.cfg.transitions.SimultaneousUpdate;
 import de.uni_freiburg.informatik.ultimate.lib.modelcheckerutils.cfg.transitions.SimultaneousUpdate.SimultaneousUpdateException;
 import de.uni_freiburg.informatik.ultimate.lib.modelcheckerutils.cfg.transitions.TransFormula;
@@ -60,10 +59,11 @@ import de.uni_freiburg.informatik.ultimate.lib.smtlibutils.SmtUtils.Simplificati
 import de.uni_freiburg.informatik.ultimate.lib.smtlibutils.SmtUtils.XnfConversionTechnique;
 import de.uni_freiburg.informatik.ultimate.lib.smtlibutils.Substitution;
 import de.uni_freiburg.informatik.ultimate.lib.smtlibutils.arrays.ArrayIndex;
+import de.uni_freiburg.informatik.ultimate.lib.smtlibutils.arrays.ArrayStore;
+import de.uni_freiburg.informatik.ultimate.lib.smtlibutils.arrays.MultiDimensionalNestedStore;
 import de.uni_freiburg.informatik.ultimate.lib.smtlibutils.arrays.MultiDimensionalSelect;
 import de.uni_freiburg.informatik.ultimate.lib.smtlibutils.normalforms.NnfTransformer;
 import de.uni_freiburg.informatik.ultimate.lib.smtlibutils.normalforms.NnfTransformer.QuantifierHandling;
-import de.uni_freiburg.informatik.ultimate.lib.smtlibutils.polynomials.AffineTerm;
 import de.uni_freiburg.informatik.ultimate.lib.smtlibutils.polynomials.IPolynomialTerm;
 import de.uni_freiburg.informatik.ultimate.lib.smtlibutils.polynomials.Monomial;
 import de.uni_freiburg.informatik.ultimate.lib.smtlibutils.polynomials.Monomial.Occurrence;
@@ -100,6 +100,8 @@ public class JordanLoopAcceleration {
 	 */
 	private static final boolean REFLEXIVE_TRANSITIVE_CLOSURE = false;
 
+	public static final String UNSUPPORTED_PREFIX = "JordanLoopAcceleration failed";
+
 
 	/**
 	 * Enum that allows us to state which iterations we consider
@@ -124,7 +126,7 @@ public class JordanLoopAcceleration {
 			su = SimultaneousUpdate.fromTransFormula(services, loopTransFormula, mgdScript);
 		} catch (final SimultaneousUpdateException e) {
 			final JordanLoopAccelerationStatisticsGenerator jlasg =
-					new JordanLoopAccelerationStatisticsGenerator(-1, -1, -1, new NestedMap2<>());
+					new JordanLoopAccelerationStatisticsGenerator(-1, -1, -1, -1, new NestedMap2<>(), e.getMessage());
 			return new JordanLoopAccelerationResult(
 					JordanLoopAccelerationResult.AccelerationStatus.SIMULTANEOUS_UPDATE_FAILED, e.getMessage(), null,
 					jlasg);
@@ -135,63 +137,74 @@ public class JordanLoopAcceleration {
 
 		final Set<Sort> nonIntegerSorts = getNonIntegerSorts(su.getDeterministicAssignment().keySet());
 		if (!nonIntegerSorts.isEmpty()) {
-			final JordanLoopAccelerationStatisticsGenerator jlasg = new JordanLoopAccelerationStatisticsGenerator(
-					numberOfAssignedVariables, numberOfHavocedVariables, -1, new NestedMap2<>());
 			final String errorMessage = "Some updated variables are of non-integer sorts : " + nonIntegerSorts;
+			final JordanLoopAccelerationStatisticsGenerator jlasg = new JordanLoopAccelerationStatisticsGenerator(
+					numberOfAssignedVariables, numberOfHavocedVariables, numberOfArrayWrites, -1, new NestedMap2<>(),
+					errorMessage);
 			return new JordanLoopAccelerationResult(JordanLoopAccelerationResult.AccelerationStatus.NONINTEGER_UPDATE,
 					errorMessage, null, jlasg);
 		}
 
 		{
-			final Set<TermVariable> tvOfHavoced = su.getHavocedVars().stream().map(IProgramVar::getTermVariable).collect(Collectors.toSet());
+			final Set<TermVariable> tvOfHavoced = su.getHavocedVars().stream().map(IProgramVar::getTermVariable)
+					.collect(Collectors.toSet());
 			for (final Entry<IProgramVar, Term> entry : su.getDeterministicAssignment().entrySet()) {
-				if (!DataStructureUtils.haveEmptyIntersection(new HashSet<>(Arrays.asList(entry.getValue().getFreeVars())), tvOfHavoced)) {
-					throw new UnsupportedOperationException("Havoced var is read!");
+				if (!DataStructureUtils.haveEmptyIntersection(
+						new HashSet<>(Arrays.asList(entry.getValue().getFreeVars())), tvOfHavoced)) {
+					throw new UnsupportedOperationException(UNSUPPORTED_PREFIX + " Havoced var is read!");
 				}
 			}
-			for (final Triple<IProgramVar, ArrayIndex, Term> entry : su.getDeterministicArrayWrites().entrySet()) {
-				if (!DataStructureUtils.haveEmptyIntersection(new HashSet<>(Arrays.asList(entry.getThird().getFreeVars())), tvOfHavoced)) {
-					throw new UnsupportedOperationException("Havoced var is read!");
+			for (final Entry<IProgramVar, MultiDimensionalNestedStore> entry : su.getDeterministicArrayWrites()
+					.entrySet()) {
+				if (entry.getValue().getIndices().size() != 1) {
+					throw new AssertionError("Nested stores!");
+				}
+				if (!DataStructureUtils.haveEmptyIntersection(
+						new HashSet<>(Arrays.asList(entry.getValue().getValues().get(0).getFreeVars())), tvOfHavoced)) {
+					throw new UnsupportedOperationException(UNSUPPORTED_PREFIX + " Havoced var is read!");
 				}
 			}
 
 		}
 
-		final Pair<LinearUpdate, String> pair = extractLinearUpdate(mgdScript, su);
+		final Pair<LinearUpdate, String> pair = LinearUpdate.fromSimultaneousUpdate(mgdScript, su);
 		if (pair.getFirst() == null) {
 			assert pair.getSecond() != null;
 			final JordanLoopAccelerationStatisticsGenerator jlasg =
 					new JordanLoopAccelerationStatisticsGenerator(numberOfAssignedVariables,
-							numberOfHavocedVariables, -1, new NestedMap2<>());
+							numberOfHavocedVariables, numberOfArrayWrites, -1, new NestedMap2<>(), pair.getSecond());
 			return new JordanLoopAccelerationResult(
 					JordanLoopAccelerationResult.AccelerationStatus.NONLINEAR_UPDATE, pair.getSecond(), null, jlasg);
 		}
 		final int numberOfReadonlyVariables = pair.getFirst().getReadonlyVariables().size();
 
-		// HashMap to get matrix index from TermVariable.
-		final HashMap<Term, Integer> varMatrixIndexMap = JordanAcceleratedUpdate
-				.determineMatrixIndices(pair.getFirst());
-		final QuadraticMatrix updateMatrix = JordanAcceleratedUpdate.computeUpdateMatrix(pair.getFirst(), varMatrixIndexMap);
+		final JordanUpdate jordanUpdate = JordanUpdate.fromLinearUpdate(pair.getFirst());
 
-		final JordanTransformationResult jordanUpdate = updateMatrix.constructJordanTransformation();
-
-		if (jordanUpdate.getStatus() == JordanTransformationStatus.UNSUPPORTED_EIGENVALUES) {
+		if (jordanUpdate.getStatus() == JordanDecompositionStatus.UNSUPPORTED_EIGENVALUES) {
 			final JordanLoopAccelerationStatisticsGenerator jlasg = new JordanLoopAccelerationStatisticsGenerator(
-					numberOfAssignedVariables, numberOfHavocedVariables, numberOfReadonlyVariables, new NestedMap2<>());
+					numberOfAssignedVariables, numberOfHavocedVariables, numberOfArrayWrites, numberOfReadonlyVariables,
+					new NestedMap2<>(), "Unsupported eigenvalues");
 			return new JordanLoopAccelerationResult(
 					JordanLoopAccelerationResult.AccelerationStatus.UNSUPPORTED_EIGENVALUES, null, null, jlasg);
 		}
-		assert JordanAcceleratedUpdate.isBlockSizeConsistent(numberOfAssignedVariables, numberOfReadonlyVariables,
-				jordanUpdate) : "inconsistent blocksize";
+		assert jordanUpdate.isBlockSizeConsistent(numberOfAssignedVariables, numberOfReadonlyVariables) : "inconsistent blocksize";
 
-		final boolean isAlternatingClosedFormRequired = JordanAcceleratedUpdate
-				.isAlternatingClosedFormRequired(jordanUpdate);
-		final UnmodifiableTransFormula loopAccelerationFormula = createLoopAccelerationFormula(logger, services,
-				mgdScript, su, pair.getFirst(), varMatrixIndexMap, jordanUpdate, loopTransFormula, true,
-				quantifyItFinExplicitly, isAlternatingClosedFormRequired);
-		final JordanLoopAccelerationStatisticsGenerator jlasg =
-				new JordanLoopAccelerationStatisticsGenerator(numberOfAssignedVariables, numberOfHavocedVariables,
-						numberOfReadonlyVariables, jordanUpdate.getJordanBlockSizes());
+		final boolean isAlternatingClosedFormRequired = jordanUpdate.isAlternatingClosedFormRequired();
+		final UnmodifiableTransFormula loopAccelerationFormula;
+		try {
+			loopAccelerationFormula = createLoopAccelerationFormula(logger, services,
+					mgdScript, su, pair.getFirst(), jordanUpdate, loopTransFormula, quantifyItFinExplicitly,
+					isAlternatingClosedFormRequired);
+		} catch (final UnsupportedOperationException uoe) {
+			final JordanLoopAccelerationStatisticsGenerator jlasg = new JordanLoopAccelerationStatisticsGenerator(
+					numberOfAssignedVariables, numberOfHavocedVariables, numberOfArrayWrites, numberOfReadonlyVariables,
+					jordanUpdate.getJordanBlockSizes(), uoe.getMessage());
+			return new JordanLoopAccelerationResult(
+					JordanLoopAccelerationResult.AccelerationStatus.OTHER, null, null, jlasg);
+		}
+		final JordanLoopAccelerationStatisticsGenerator jlasg = new JordanLoopAccelerationStatisticsGenerator(
+				numberOfAssignedVariables, numberOfHavocedVariables, numberOfArrayWrites, numberOfReadonlyVariables,
+				jordanUpdate.getJordanBlockSizes(), "");
 		if (isAlternatingClosedFormRequired) {
 			jlasg.reportAlternatingAcceleration();
 		} else {
@@ -204,70 +217,6 @@ public class JordanLoopAcceleration {
 
 		return new JordanLoopAccelerationResult(JordanLoopAccelerationResult.AccelerationStatus.SUCCESS, null,
 				loopAccelerationFormula, jlasg);
-	}
-
-	private static Pair<LinearUpdate, String> extractLinearUpdate(final ManagedScript mgdScript,
-			final SimultaneousUpdate su) {
-		final Set<TermVariable> termVariablesOfModified = new HashSet<>();
-		for (final Entry<IProgramVar, Term> update : su.getDeterministicAssignment().entrySet()) {
-			termVariablesOfModified.add(update.getKey().getTermVariable());
-		}
-		for (final IProgramVar pv : su.getHavocedVars()) {
-			termVariablesOfModified.add(pv.getTermVariable());
-		}
-		final Set<Term> readonlyVariables = new HashSet<>();
-		final Map<TermVariable, AffineTerm> updateMap = new HashMap<>();
-		for (final Entry<IProgramVar, Term> update : su.getDeterministicAssignment().entrySet()) {
-			final Triple<AffineTerm, Set<Term>, String> triple = extractLinearUpdate(mgdScript, termVariablesOfModified,
-					update);
-			if (triple.getFirst() == null) {
-				assert triple.getSecond() == null;
-				assert triple.getThird() != null;
-				return new Pair<>(null, triple.getThird());
-			} else {
-				assert triple.getSecond() != null;
-				assert triple.getThird() == null;
-				updateMap.put(update.getKey().getTermVariable(), triple.getFirst());
-				readonlyVariables.addAll(triple.getSecond());
-			}
-		}
-		return new Pair<>(new LinearUpdate(updateMap, readonlyVariables), null);
-	}
-
-	private static Triple<AffineTerm, Set<Term>, String> extractLinearUpdate(final ManagedScript mgdScript,
-			final Set<TermVariable> termVariablesOfModified, final Entry<IProgramVar, Term> update) {
-		final IPolynomialTerm polyRhs = (IPolynomialTerm) new PolynomialTermTransformer(mgdScript.getScript())
-				.transform(update.getValue());
-		final Map<Term, Rational> variables2coeffcient = new HashMap<>();
-		final Set<Term> readonlyVariables = new HashSet<>();
-		for (final Entry<Monomial, Rational> entry : polyRhs.getMonomial2Coefficient().entrySet()) {
-			final Term monomialAsTerm = entry.getKey().toTerm(mgdScript.getScript());
-			if (!termVariablesOfModified.contains(monomialAsTerm)) {
-				final TermVariable termVariableOfModified = containsTermVariableOfModified(termVariablesOfModified,
-						monomialAsTerm);
-				if (termVariableOfModified != null) {
-					final String errorMessage = String.format(
-							"Monomial contains modified variable. Monomial %s, Variable %s", monomialAsTerm,
-							termVariableOfModified);
-					return new Triple<AffineTerm, Set<Term>, String>(null, null, errorMessage);
-				} else {
-					readonlyVariables.add(monomialAsTerm);
-				}
-			}
-			variables2coeffcient.put(monomialAsTerm, entry.getValue());
-		}
-		final AffineTerm affineTerm = new AffineTerm(polyRhs.getSort(), polyRhs.getConstant(), variables2coeffcient);
-		return new Triple<AffineTerm, Set<Term>, String>(affineTerm, readonlyVariables, null);
-	}
-
-	private static TermVariable containsTermVariableOfModified(final Set<TermVariable> termVariablesOfModified,
-			final Term monomialAsTerm) {
-		for (final TermVariable tv : monomialAsTerm.getFreeVars()) {
-			if (termVariablesOfModified.contains(tv)) {
-				return tv;
-			}
-		}
-		return null;
 	}
 
 	private static Set<Sort> getNonIntegerSorts(final Set<IProgramVar> programVariables) {
@@ -286,20 +235,46 @@ public class JordanLoopAcceleration {
 	 * inVars.
 	 */
 	private static ClosedFormOfUpdate computeClosedFormOfUpdate(final ManagedScript mgdScript,
-			final SimultaneousUpdate su, final LinearUpdate linearUpdate,
-			final HashMap<Term, Integer> varMatrixIndexMap, final JordanTransformationResult jordanUpdate,
-			final TermVariable it, final TermVariable itHalf, final Map<IProgramVar, TermVariable> inVars,
-			final Iterations itKind) {
-		Objects.requireNonNull(itKind);
+			final SimultaneousUpdate su, final TermVariable it,
+			final Map<IProgramVar, TermVariable> inVars, final Map<TermVariable, Term> closedFormMap) {
 		// TODO 20220914 Matthias: Maybe this is not the right place for this check. The
 		// check is yet too strict,
 		// we support at least array writes where indices contain arrays that are not
 		// modified.
-		for (final Triple<IProgramVar, ArrayIndex, Term> triple : su.getDeterministicArrayWrites().entrySet()) {
-			for (final Term entry : triple.getSecond()) {
-				for (final TermVariable tv : Arrays.asList(entry.getFreeVars())) {
+		for (final Entry<IProgramVar, MultiDimensionalNestedStore> entry : su.getDeterministicArrayWrites().entrySet()) {
+			for (int i = 0; i < entry.getValue().getIndices().size(); i++) {
+				final ArrayIndex idx = entry.getValue().getIndices().get(i);
+				for (final TermVariable tv : idx.getFreeVars()) {
 					if (SmtSortUtils.isArraySort(tv.getSort())) {
-						throw new UnsupportedOperationException("ArrayIndex contains modified variable");
+						throw new UnsupportedOperationException("ArrayIndex contains some array variable");
+					}
+				}
+				final Term value = entry.getValue().getValues().get(i);
+				final Collection<ArrayStore> stores = ArrayStore.extractStores(value, true);
+				if (!stores.isEmpty()) {
+					throw new UnsupportedOperationException("Written value contains store");
+				}
+
+				final List<MultiDimensionalSelect> selects = MultiDimensionalSelect.extractSelectDeep(value);
+				if (selects.size() > 1) {
+					// FIXME 20230606 Matthias: Occurs sedomly, do not support by now
+					throw new UnsupportedOperationException("Written value contains several selects");
+				}
+				if (selects.size() == 1) {
+					final MultiDimensionalSelect mds = selects.get(0);
+					if (entry.getValue().getArray() == mds.getArray()) {
+						throw new UnsupportedOperationException(String.format(
+								"Array update for index %s writes a value that reads the same array at index %s", idx,
+								mds.getIndex()));
+					} else {
+						throw new UnsupportedOperationException(
+								String.format("Update of array %s with value that reads from array %s",
+										entry.getValue().getArray(), mds.getArray()));
+					}
+				}
+				for (final TermVariable tv : Arrays.asList(value.getFreeVars())) {
+					if (SmtSortUtils.isArraySort(tv.getSort())) {
+						throw new UnsupportedOperationException("Written value contains modified array variable");
 					}
 				}
 			}
@@ -309,11 +284,6 @@ public class JordanLoopAcceleration {
 		final Map<TermVariable, Term> closedFormWithInvarsMap;
 		{
 			closedFormWithInvarsMap = new HashMap<>();
-			// Map that assigns to the default TermVariable its closed from,
-			// where each variable in the closed form is represented by its default
-			// TermVariable.
-			final Map<TermVariable, Term> closedFormMap = JordanAcceleratedUpdate.constructClosedForm(mgdScript,
-					linearUpdate, varMatrixIndexMap, jordanUpdate, it, itHalf, itKind);
 			final HashMap<Term, Term> defaultTv2inVar = new HashMap<>();
 			for (final Entry<IProgramVar, TermVariable> entry : inVars.entrySet()) {
 				defaultTv2inVar.put(entry.getKey().getTermVariable(), entry.getValue());
@@ -327,10 +297,21 @@ public class JordanLoopAcceleration {
 		for (final IProgramVar pv : su.getDeterministicAssignment().keySet()) {
 			closedFormForProgramVar.put(pv, closedFormWithInvarsMap.get(pv.getTermVariable()));
 		}
+		// Mapping in which that maps default TermVariables to their closed form (where
+		// variables are represented by inVars). Since array indices may also contain
+		// read-only variables we have to add from the inVars mapping.
+		final HashMap<TermVariable, Term> substitutionMapping = new HashMap<>(closedFormWithInvarsMap);
+		for (final IProgramVar pv : su.getReadonlyVars()) {
+			final Term oldValue = substitutionMapping.put(pv.getTermVariable(), inVars.get(pv));
+			if (oldValue != null) {
+				throw new AssertionError(String.format("Contradiction: %s is readonly and modified", pv));
+			}
+		}
 		final NestedMap2<IProgramVar, ArrayIndex, Term> array2Index2values = applySubstitutionToIndexAndValue(mgdScript,
-				closedFormWithInvarsMap, su.getDeterministicArrayWrites());
+				substitutionMapping, su.getDeterministicArrayWrites());
+		final ClosedFormOfUpdate res = new ClosedFormOfUpdate(closedFormForProgramVar, array2Index2values);
 		checkIndices(mgdScript, array2Index2values, it);
-		return new ClosedFormOfUpdate(closedFormForProgramVar, array2Index2values);
+		return res;
 	}
 
 	private static void checkIndices(final ManagedScript mgdScript,
@@ -341,11 +322,12 @@ public class JordanLoopAcceleration {
 	}
 
 	private static void checkIndex(final ManagedScript mgdScript, final ArrayIndex index, final TermVariable it) {
-		final List<IPolynomialTerm> polyIndex = index.stream().map(x -> PolynomialTermTransformer.convert(mgdScript.getScript(), x)).collect(Collectors.toList());
+		final List<IPolynomialTerm> polyIndex = index.stream()
+				.map(x -> PolynomialTermTransformer.convert(mgdScript.getScript(), x)).collect(Collectors.toList());
 		if (isStrictlyMonotone(polyIndex, it)) {
 			return;
 		} else {
-			throw new UnsupportedOperationException("Index not moving: " + index);
+			throw new UnsupportedOperationException(UNSUPPORTED_PREFIX + " Index not moving: " + index);
 		}
 	}
 
@@ -355,7 +337,7 @@ public class JordanLoopAcceleration {
 			for (final Entry<Monomial, Rational> entry : poly.getMonomial2Coefficient().entrySet()) {
 				final Occurrence occ = entry.getKey().isExclusiveVariable(it);
 				if (occ == Occurrence.NON_EXCLUSIVE_OR_SUBTERM) {
-					throw new UnsupportedOperationException("Probably not monotone: " + entry.getKey());
+					throw new UnsupportedOperationException(UNSUPPORTED_PREFIX + " Probably not monotone: " + entry.getKey());
 				} else if (occ == Occurrence.AS_EXCLUSIVE_VARIABlE) {
 					strictlyMonotone = true;
 				}
@@ -368,14 +350,18 @@ public class JordanLoopAcceleration {
 
 	private static NestedMap2<IProgramVar, ArrayIndex, Term> applySubstitutionToIndexAndValue(
 			final ManagedScript mgdScript, final Map<? extends Term, ? extends Term> substitutionMapping,
-			final NestedMap2<IProgramVar, ArrayIndex, Term> array2Index2Value) {
+			final Map<IProgramVar, MultiDimensionalNestedStore> map) {
 		final NestedMap2<IProgramVar, ArrayIndex, Term> result = new NestedMap2<>();
-		for (final Triple<IProgramVar, ArrayIndex, Term> triple : array2Index2Value.entrySet()) {
-			final List<Term> newIndexEntries = triple.getSecond().stream()
+		for (final Entry<IProgramVar, MultiDimensionalNestedStore> entry : map.entrySet()) {
+			if (entry.getValue().getIndices().size() != 1) {
+				throw new AssertionError("Nested stores!");
+			}
+			final List<Term> newIndexEntries = entry.getValue().getIndices().get(0).stream()
 					.map(x -> Substitution.apply(mgdScript, substitutionMapping, x)).collect(Collectors.toList());
 			final ArrayIndex newArrayIndex = new ArrayIndex(newIndexEntries);
-			final Term newValue = Substitution.apply(mgdScript, substitutionMapping, triple.getThird());
-			result.put(triple.getFirst(), newArrayIndex, newValue);
+			final Term newValue = Substitution.apply(mgdScript, substitutionMapping,
+					entry.getValue().getValues().get(0));
+			result.put(entry.getKey(), newArrayIndex, newValue);
 		}
 		return result;
 	}
@@ -408,47 +394,73 @@ public class JordanLoopAcceleration {
 
 	/**
 	 * Create the loop Acceleration formula.
-	 * @param suwr
-	 * @param linearUpdate
-	 *
 	 * @param isAlternatingClosedFormRequired
 	 *            If set we construct a closed from that consists of two formulas one for even iteration steps and one
 	 *            for odd iteration steps. Otherwise the is one closed form for all iteration steps.
 	 */
 	private static UnmodifiableTransFormula createLoopAccelerationFormula(final ILogger logger,
 			final IUltimateServiceProvider services, final ManagedScript mgdScript, final SimultaneousUpdate su,
-			final LinearUpdate linearUpdate, final HashMap<Term, Integer> varMatrixIndexMap,
-			final JordanTransformationResult jordanUpdate, final UnmodifiableTransFormula loopTransFormula,
-			final boolean restrictedVersionPossible, final boolean quantifyItFinExplicitly,
+			final LinearUpdate linearUpdate, final JordanUpdate jordanUpdate,
+			final UnmodifiableTransFormula loopTransFormula, final boolean quantifyItFinExplicitly,
 			final boolean isAlternatingClosedFormRequired) {
 
-		final int sizeOfLargestEv0Block = JordanAcceleratedUpdate.computeSizeOfLargestEv0Block(jordanUpdate);
-		if (sizeOfLargestEv0Block > 1) {
-			throw new UnsupportedOperationException(
-					String.format("Consider first %s iterations separately", sizeOfLargestEv0Block));
-		}
+		final int sizeOfLargestEv0Block = jordanUpdate.computeSizeOfLargestEv0Block();
+		assert sizeOfLargestEv0Block >= 0;
 
 		final UnmodifiableTransFormula guardTf = TransFormulaUtils.computeGuard(loopTransFormula, mgdScript, services);
 		final Map<IProgramVar, TermVariable> newInVars = new HashMap<>(loopTransFormula.getInVars());
 		// The call of `constructXPrimeEqualsX` might add entries to the newInVars.
 		final Term xPrimeEqualsX = constructXPrimeEqualsX(mgdScript, newInVars, loopTransFormula.getOutVars());
 
+		final List<Term> disjuncts = new ArrayList<>();
+		if (sizeOfLargestEv0Block > 1) {
+			// we have to consider the first sizeOfLargestEv0Block-1 iterations separately
+			for (int i = 1; i < sizeOfLargestEv0Block; i++) {
+				final List<Term> guards = new ArrayList<>();
+				for (int j = 1; j <= i; j++) {
+					final Term guard = constructGuardForFixedIteration(mgdScript, su.getHavocedVars(), guardTf, j,
+							jordanUpdate, su, newInVars);
+					guards.add(guard);
+				}
+				final Term guard = SmtUtils.and(mgdScript.getScript(), guards);
+				final Map<TermVariable, Term> closedFormMap = jordanUpdate.constructClosedForm(mgdScript, i);
+				final ClosedFormOfUpdate closedFormForI = computeClosedFormOfUpdate(mgdScript, su, null, newInVars,
+						closedFormMap);
+				final Term update = constructClosedUpdateConstraint(mgdScript.getScript(), loopTransFormula, su,
+						closedFormForI.getScalarUpdates());
+				if (!closedFormForI.getArrayUpdates().isEmpty()) {
+					throw new UnsupportedOperationException(
+							String.format(UNSUPPORTED_PREFIX + " Consider first %s iterations separately for arrays",
+									sizeOfLargestEv0Block));
+				}
+				final Term disjunct = SmtUtils.and(mgdScript.getScript(), guard, update);
+				disjuncts.add(disjunct);
+			}
+
+		}
+
 		final Term transitiveClosure;
 		final TermVariable itFin;
 		if (isAlternatingClosedFormRequired) {
 			if (!su.getDeterministicArrayWrites().isEmpty()) {
-				throw new UnsupportedOperationException("If alternating form is required we do not yet support arrays");
+				throw new UnsupportedOperationException(
+						UNSUPPORTED_PREFIX + " If alternating form is required we do not yet support arrays");
+			}
+			if (sizeOfLargestEv0Block > 1) {
+				throw new UnsupportedOperationException(String.format(UNSUPPORTED_PREFIX
+						+ " If alternating form is required we cannot yet consider first %s iterations separately",
+						sizeOfLargestEv0Block));
 			}
 			itFin = mgdScript.constructFreshTermVariable("itFinHalf", SmtSortUtils.getIntSort(mgdScript.getScript()));
 			transitiveClosure = createLoopAccelerationTermAlternating(logger, services, mgdScript, su, linearUpdate,
-					varMatrixIndexMap, jordanUpdate, loopTransFormula, guardTf, itFin, newInVars);
+					jordanUpdate, loopTransFormula, guardTf, itFin, newInVars);
 		} else {
 			itFin = mgdScript.constructFreshTermVariable("itFin", SmtSortUtils.getIntSort(mgdScript.getScript()));
-			transitiveClosure = createLoopAccelerationTermSequential(logger, services, mgdScript, su, linearUpdate,
-					varMatrixIndexMap, jordanUpdate, loopTransFormula, guardTf, restrictedVersionPossible, itFin,
-					newInVars);
+			final int firstIteration = Math.max(sizeOfLargestEv0Block, 1);
+			transitiveClosure = createLoopAccelerationTermSequential(services, mgdScript, su, jordanUpdate,
+					loopTransFormula, guardTf, itFin, newInVars, firstIteration);
 		}
-		final Term accelerationTerm;
+		disjuncts.add(transitiveClosure);
 		if (REFLEXIVE_TRANSITIVE_CLOSURE) {
 			// (and (not (guard)) (x'=x))
 			final Term reflexiveClosure;
@@ -460,10 +472,9 @@ public class JordanLoopAcceleration {
 					reflexiveClosure = Util.and(mgdScript.getScript(), xPrimeEqualsX);
 				}
 			}
-			accelerationTerm = Util.or(mgdScript.getScript(), reflexiveClosure, transitiveClosure);
-		} else {
-			accelerationTerm = transitiveClosure;
+			disjuncts.add(reflexiveClosure);
 		}
+		final Term accelerationTerm = SmtUtils.or(mgdScript.getScript(), disjuncts);
 		final UnmodifiableTransFormula loopAccelerationFormula = buildAccelerationTransFormula(logger, mgdScript,
 				services, loopTransFormula, accelerationTerm, quantifyItFinExplicitly, itFin, newInVars);
 
@@ -495,8 +506,10 @@ public class JordanLoopAcceleration {
 					loopTransFormula.getBranchEncoders().isEmpty(), loopTransFormula.getBranchEncoders(),
 					loopTransFormula.getAuxVars().isEmpty());
 			tfb.setInfeasibility(loopTransFormula.isInfeasible());
-			final Term quantified = SmtUtils.quantifier(mgdScript.getScript(), QuantifiedFormula.EXISTS,
+			Term quantified = SmtUtils.quantifier(mgdScript.getScript(), QuantifiedFormula.EXISTS,
 					Collections.singleton(itFin), simplified);
+			quantified = PartialQuantifierElimination.eliminateCompat(services,
+					mgdScript, true, PqeTechniques.ALL, SimplificationTechnique.SIMPLIFY_DDA, quantified);
 			tfb.setFormula(quantified);
 			loopAccelerationFormula = tfb.finishConstruction(mgdScript);
 		} else {
@@ -529,29 +542,37 @@ public class JordanLoopAcceleration {
 	 * 				(guard(closedForm(x,it)))))
 	 * 		((x' = closedForm(x,itFin)))))))
 	 * </pre>
-	 * @param services
-	 * @param mgdScript
-	 * @param su
-	 * @param suwr
-	 * @param linearUpdate
-	 * @param loopTransFormula
-	 * @param guardTf
-	 * @return
+	 * @param firstIteration
 	 */
-	private static Term createLoopAccelerationTermSequential(final ILogger logger,
-			final IUltimateServiceProvider services, final ManagedScript mgdScript, final SimultaneousUpdate su,
-			final LinearUpdate linearUpdate, final HashMap<Term, Integer> varMatrixIndexMap,
-			final JordanTransformationResult jordanUpdate, final UnmodifiableTransFormula loopTransFormula,
-			final UnmodifiableTransFormula guardTf, final boolean restrictedVersionPossible, final TermVariable itFin,
-			final Map<IProgramVar, TermVariable> inVars) {
+	private static Term createLoopAccelerationTermSequential(final IUltimateServiceProvider services,
+			final ManagedScript mgdScript, final SimultaneousUpdate su, final JordanUpdate jordanUpdate,
+			final UnmodifiableTransFormula loopTransFormula, final UnmodifiableTransFormula guardTf,
+			final TermVariable itFin, final Map<IProgramVar, TermVariable> inVars, final int firstIteration) {
+		if (firstIteration < 1) {
+			throw new IllegalArgumentException("Cannot construct constraint for non-positive iterations");
+		}
 		final Script script = mgdScript.getScript();
 
-		final ClosedFormOfUpdate closedFormItFinTuple =
-				computeClosedFormOfUpdate(mgdScript, su, linearUpdate, varMatrixIndexMap, jordanUpdate, itFin, null,
-						loopTransFormula.getInVars(), Iterations.ALL);
+		final ClosedFormOfUpdate closedFormItFinTuple;
+		{
+			final Map<TermVariable, Term> closedFormMap = jordanUpdate.constructClosedForm(mgdScript, itFin, null,
+					Iterations.ALL);
+			closedFormItFinTuple = computeClosedFormOfUpdate(mgdScript, su, itFin, loopTransFormula.getInVars(),
+					closedFormMap);
+		}
 		final Map<IProgramVar, Term> closedFormItFin = closedFormItFinTuple.getScalarUpdates();
 
-		final List<Term> conjuncts = new ArrayList<Term>();
+		final List<Term> conjuncts = new ArrayList<>();
+		for (int i = 1; i < firstIteration; i++) {
+			// Construct guards for all iterations before our first iteration
+			final Term guard = constructGuardForFixedIteration(mgdScript, su.getHavocedVars(), guardTf, i, jordanUpdate,
+					su, inVars);
+			conjuncts.add(guard);
+		}
+		// We have to handle the guard of our first iteration separately, because this
+		// guard utilizes the closed form from the preceding iteration.
+		conjuncts.add(constructGuardForFixedIteration(mgdScript, su.getHavocedVars(), guardTf, firstIteration,
+				jordanUpdate, su, inVars));
 
 		if (CONCATENATE_WITH_NEGATION_OF_GUARD) {
 			// Construct subformula guard(cf(x,itFin)).
@@ -562,8 +583,9 @@ public class JordanLoopAcceleration {
 			conjuncts.add(notGuardOfCf);
 		}
 
-		// (> itFin 0)
-		final Term firstConjunct = script.term(">", itFin, script.numeral(BigInteger.ZERO));
+		// We presume the final iteration is at least our first iteration.
+		// (>= itFin firstIteration)
+		final Term firstConjunct = script.term(">=", itFin, script.numeral(BigInteger.valueOf(firstIteration)));
 		conjuncts.add(firstConjunct);
 
 		// (forall ((it Int)) (=> (and (<= 1 it) (<= it (- itFin 1)))
@@ -572,9 +594,14 @@ public class JordanLoopAcceleration {
 		final Term fourthConjunct;
 		final Term guardOfClosedFormIt;
 		{
-			final Term leftSideOfImpl = constructIterationRange(script, BigInteger.ONE, it, BigInteger.ONE, itFin);
-			final ClosedFormOfUpdate closedFormIt = computeClosedFormOfUpdate(mgdScript, su, linearUpdate,
-					varMatrixIndexMap, jordanUpdate, it, null, inVars, Iterations.ALL);
+			final Term leftSideOfImpl = constructIterationRange(script, BigInteger.valueOf(firstIteration), it,
+					BigInteger.ONE, itFin);
+			final ClosedFormOfUpdate closedFormIt;
+			{
+				final Map<TermVariable, Term> closedFormMap = jordanUpdate.constructClosedForm(mgdScript, it, null,
+						Iterations.ALL);
+				closedFormIt = computeClosedFormOfUpdate(mgdScript, su, it, inVars, closedFormMap);
+			}
 			{
 				guardOfClosedFormIt = constructGuardAfterIntermediateIterations(mgdScript, su.getHavocedVars(),
 						guardTf, closedFormIt.getScalarUpdates());
@@ -598,7 +625,7 @@ public class JordanLoopAcceleration {
 		final Term xPrimed = constructClosedUpdateConstraint(script, loopTransFormula, su, closedFormItFin);
 		conjuncts.add(xPrimed);
 
-		conjuncts.add(guardTf.getFormula());
+
 //		final Term eq = constructArrayUpdateEquality(script, loopTransFormula.getOutVars(),
 //				applySubstitutionToIndexAndValue(mgdScript,
 //						TransFormulaUtils.constructDefaultvarsToInvarsMap(loopTransFormula),
@@ -620,7 +647,7 @@ public class JordanLoopAcceleration {
 		for (final IProgramVar array : closedFormIt.getArrayUpdates().keySet()) {
 			final Set<Entry<ArrayIndex, Term>> entries = closedFormIt.getArrayUpdates().get(array).entrySet();
 			if (entries.size() > 1) {
-				throw new UnsupportedOperationException("several updates per array");
+				throw new UnsupportedOperationException(UNSUPPORTED_PREFIX + " Several updates per array");
 			}
 			final ArrayIndex index;
 			final Term value;
@@ -639,8 +666,7 @@ public class JordanLoopAcceleration {
 			final Term conjunct1;
 			{
 				final Term valueUpdate = SmtUtils.equality(script,
-						new MultiDimensionalSelect(loopTransFormula.getOutVars().get(array), new ArrayIndex(idx),
-								script).toTerm(script),
+						new MultiDimensionalSelect(loopTransFormula.getOutVars().get(array), new ArrayIndex(idx)).toTerm(script),
 						value);
 				final Term impl1 = SmtUtils.implies(script, inRangeIndexEquality, valueUpdate);
 				final Term quantified = SmtUtils.quantifier(script, QuantifiedFormula.FORALL, Collections.singleton(it),
@@ -651,9 +677,8 @@ public class JordanLoopAcceleration {
 			final Term conjunct2;
 			{
 				final Term valueConstancy = SmtUtils.equality(script,
-						new MultiDimensionalSelect(loopTransFormula.getOutVars().get(array), new ArrayIndex(idx),
-								script).toTerm(script),
-						new MultiDimensionalSelect(loopTransFormula.getInVars().get(array), new ArrayIndex(idx), script)
+						new MultiDimensionalSelect(loopTransFormula.getOutVars().get(array), new ArrayIndex(idx)).toTerm(script),
+						new MultiDimensionalSelect(loopTransFormula.getInVars().get(array), new ArrayIndex(idx))
 								.toTerm(script));
 				final Term existsInRangeEquality = SmtUtils.quantifier(script, QuantifiedFormula.EXISTS,
 						Collections.singleton(it), inRangeIndexEquality);
@@ -682,7 +707,7 @@ public class JordanLoopAcceleration {
 		} else {
 			// TODO: Works analogously to two dimensions, but I did not had examples to test
 			// an implementation.
-			throw new UnsupportedOperationException("Dimension not yet supported: " + dimension);
+			throw new UnsupportedOperationException(UNSUPPORTED_PREFIX + " Dimension not yet supported: " + dimension);
 		}
 	}
 
@@ -702,7 +727,21 @@ public class JordanLoopAcceleration {
 		return Util.and(script, itGreaterLowerBould, itSmallerItFinMinusUbo);
 	}
 
-
+	private static Term constructGuardForFixedIteration(final ManagedScript mgdScript,
+			final Set<IProgramVar> havocedVars, final UnmodifiableTransFormula guardTf, final int k,
+			final JordanUpdate jordanUpdate, final SimultaneousUpdate su,
+			final Map<IProgramVar, TermVariable> inVars) {
+		if (k < 1) {
+			throw new IllegalArgumentException();
+		}
+		if (k == 1) {
+			return guardTf.getFormula();
+		}
+		final Map<TermVariable, Term> closedFormMap = jordanUpdate.constructClosedForm(mgdScript, k-1);
+		final ClosedFormOfUpdate closedFormForK = computeClosedFormOfUpdate(mgdScript, su, null, inVars, closedFormMap);
+		return constructGuardAfterIntermediateIterations(mgdScript, havocedVars, guardTf,
+				closedFormForK.getScalarUpdates());
+	}
 
 	private static Term constructGuardAfterIntermediateIterations(final ManagedScript mgdScript,
 			final Set<IProgramVar> havocedVars, final UnmodifiableTransFormula guardTf,
@@ -763,7 +802,7 @@ public class JordanLoopAcceleration {
 		final List<Term> terms = new ArrayList<>();
 		for (final Triple<IProgramVar, ArrayIndex, Term> triple : arrayUpdates.entrySet()) {
 			final TermVariable arrayOutVar = outVars.get(triple.getFirst());
-			final MultiDimensionalSelect mds = new MultiDimensionalSelect(arrayOutVar, triple.getSecond(), script);
+			final MultiDimensionalSelect mds = new MultiDimensionalSelect(arrayOutVar, triple.getSecond());
 			terms.add(SmtUtils.equality(script, mds.toTerm(script), triple.getThird()));
 		}
 		return SmtUtils.and(script, terms);
@@ -811,7 +850,7 @@ public class JordanLoopAcceleration {
 	private static Term createLoopAccelerationTermAlternating(final ILogger logger,
 			final IUltimateServiceProvider services, final ManagedScript mgdScript,
 			final SimultaneousUpdate su, final LinearUpdate linearUpdate,
-			final HashMap<Term, Integer> varMatrixIndexMap, final JordanTransformationResult jordanUpdate,
+			final JordanUpdate jordanUpdate,
 			final UnmodifiableTransFormula loopTransFormula, final UnmodifiableTransFormula guardTf,
 			final TermVariable itFinHalf, final Map<IProgramVar, TermVariable> inVars) {
 
@@ -822,13 +861,22 @@ public class JordanLoopAcceleration {
 		final Term itFinHalfGreater0 = script.term(">", itFinHalf, script.numeral(BigInteger.ZERO));
 
 		// (not (guard(closedFormEven(x, 2*itFinHalf))))
-		final ClosedFormOfUpdate closedFormEvenItFin = computeClosedFormOfUpdate(mgdScript, su, linearUpdate,
-				varMatrixIndexMap, jordanUpdate, null, itFinHalf, inVars, Iterations.EVEN);
+		final ClosedFormOfUpdate closedFormEvenItFin;
+		{
+			final Map<TermVariable, Term> closedFormMap = jordanUpdate.constructClosedForm(mgdScript,
+					null, itFinHalf, Iterations.EVEN);
+			closedFormEvenItFin = computeClosedFormOfUpdate(mgdScript, su, null,
+					inVars, closedFormMap);
+		}
 		final Term guardOfClosedFormEvenItFin = constructGuardAfterFinalIteration(mgdScript, su.getHavocedVars(),
 				loopTransFormula.getOutVars(), guardTf, closedFormEvenItFin.getScalarUpdates());
 
-		final ClosedFormOfUpdate closedFormOddItFin = computeClosedFormOfUpdate(mgdScript, su, linearUpdate,
-				varMatrixIndexMap, jordanUpdate, null, itFinHalf, inVars, Iterations.ODD);
+		final ClosedFormOfUpdate closedFormOddItFin;
+		{
+			final Map<TermVariable, Term> closedFormMap = jordanUpdate.constructClosedForm(mgdScript, null, itFinHalf,
+					Iterations.ODD);
+			closedFormOddItFin = computeClosedFormOfUpdate(mgdScript, su, null, inVars, closedFormMap);
+		}
 		final Term guardOfClosedFormOddItFin = constructGuardAfterFinalIteration(mgdScript, su.getHavocedVars(),
 				loopTransFormula.getOutVars(), guardTf, closedFormOddItFin.getScalarUpdates());
 
@@ -840,8 +888,13 @@ public class JordanLoopAcceleration {
 		final Term forallTerm1Implication1Left = Util.and(script, oneLeqItHalf, itHalfLeqItFinHalfM1);
 
 		// (guard(closedFormEven(x, 2*itHalf)))
-		final ClosedFormOfUpdate closedFormEvenIt = computeClosedFormOfUpdate(mgdScript, su, linearUpdate,
-				varMatrixIndexMap, jordanUpdate, null, itHalf, inVars, Iterations.EVEN);
+		final ClosedFormOfUpdate closedFormEvenIt;
+		{
+			final Map<TermVariable, Term> closedFormMap = jordanUpdate.constructClosedForm(mgdScript, null, itHalf,
+					Iterations.EVEN);
+			closedFormEvenIt = computeClosedFormOfUpdate(mgdScript, su, null,
+				inVars, closedFormMap);
+		}
 		final Term guardOfClosedFormEvenIt = constructGuardAfterIntermediateIterations(mgdScript, su.getHavocedVars(),
 				guardTf, closedFormEvenIt.getScalarUpdates());
 
@@ -854,8 +907,13 @@ public class JordanLoopAcceleration {
 		final Term forallTerm1Implication2Left = Util.and(script, zeroLeqItHalf, itHalfLeqItFinHalfM1);
 
 		// (guard(closedFormOdd(x, 2*itHalf+1))
-		final ClosedFormOfUpdate closedFormOddIt = computeClosedFormOfUpdate(mgdScript, su, linearUpdate,
-				varMatrixIndexMap, jordanUpdate, null, itHalf, inVars, Iterations.ODD);
+		final ClosedFormOfUpdate closedFormOddIt;
+		{
+			final Map<TermVariable, Term> closedFormMap = jordanUpdate.constructClosedForm(mgdScript, null, itHalf,
+					Iterations.ODD);
+			closedFormOddIt = computeClosedFormOfUpdate(mgdScript, su, null,
+				inVars, closedFormMap);
+		}
 		final Term guardOfClosedFormOddIt = constructGuardAfterIntermediateIterations(mgdScript, su.getHavocedVars(),
 				guardTf, closedFormOddIt.getScalarUpdates());
 
@@ -1053,8 +1111,8 @@ public class JordanLoopAcceleration {
 		} else {
 			substitutionMapping2.put(it, (ConstantTerm) script.numeral(BigInteger.ONE));
 		}
-		final PureSubstitution subst2 = new PureSubstitution(script, substitutionMapping2);
-		final Term notGuardOfClosedForm2 = Util.not(script, subst2.transform(guardOfClosedFormEven));
+		final Term notGuardOfClosedForm2 = Util.not(script,
+				PureSubstitution.apply(script, substitutionMapping2, guardOfClosedFormEven));
 
 		if (Util.checkSat(script, Util.and(script, sequentialCompositionSubst, notGuardOfClosedForm2,
 				notLoopAccFormula)) == LBool.UNKNOWN) {
@@ -1102,7 +1160,7 @@ public class JordanLoopAcceleration {
 
 	public static class JordanLoopAccelerationResult {
 		public enum AccelerationStatus {
-			SUCCESS, SIMULTANEOUS_UPDATE_FAILED, NONINTEGER_UPDATE, NONLINEAR_UPDATE, UNSUPPORTED_EIGENVALUES,
+			SUCCESS, SIMULTANEOUS_UPDATE_FAILED, NONINTEGER_UPDATE, NONLINEAR_UPDATE, UNSUPPORTED_EIGENVALUES, OTHER,
 		};
 
 		private final AccelerationStatus mAccelerationStatus;
